# vidarol-webview-launcher

./: CMakeLists.txt  README.md
frontend/: index.html
src/: config.cpp  config.h  downloader.cpp  downloader.h  injector.cpp  injector.h  main.cpp  main.h  resource.h  resources.rc  utils.cpp  utils.h
